# shopify-api

./: .gitignore  Dockerfile  Pipfile  README.md  celerybeat-schedule.bak  celerybeat-schedule.dir  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  render.yaml  requirements.dev.txt  requirements.prod.txt  requirements.txt  test_script.py  text.txt  ts.ts
.github/workflows/: test.yml
core/: admin.py  models.py
core/migrations/: 0001_initial.py
like/: models.py
like/migrations/: 0001_initial.py
locust/: locustfile.py
playground/: tasks.py  urls.py  views.py
staticfile/: global.css
staticfile/store/: ts.js
store/: admin.py  models.py  paginators.py  serializers.py  urls.py  utilities.py  views.py
store/management/commands/: seed_db.py
store/migrations/: 0001_initial.py  0002_alter_product_title.py  0003_alter_productimage_image.py  0004_alter_cartitem_unique_together_and_more.py  0005_remove_product_image.py
store/static/store/: style.css
store/tests/: test_collection_endpoint.py
storefront/: asgi.py  celery.py  urls.py  wsgi.py
storefront/settings/: common.py  dev.py  prod.py  workflow.py
tag/: models.py
tag/migrations/: 0001_initial.py
templates/: home.html
templates/emails/: base.html  email.html
