[tool.poetry]
name = "shopify-api"
version = "0.1.0"
description = "eCommerce Application API"
authors = ["Daud Namayala"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "5.4.0"
click = "8.1.7"
dj-database-url = "2.1.0"
django = "5.0.4"
django-cors-headers = "4.3.1"
django-filter = "24.2"
django-redis = "5.4.0"
djangorestframework = "3.15.1"
djangorestframework-simplejwt = "5.3.1"
djoser = "2.2.2"
drf-nested-routers = "0.93.5"
drf-spectacular = "0.27.2"
install = "1.3.5"
prometheus-client = "0.20.0"
pygments = "2.17.2"
pyjwt = "2.8.0"
pyyaml = "6.0.1"
redis = "5.0.3"
whitenoise = "6.6.0"
psycopg = "^3.1.18"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
scanreq = "^0.0.9"
django-silk = "^5.1.0"
django-debug-toolbar = "^4.3.0"
flower = "^2.0.1"
isort = "^5.13.2"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
pip-upgrader = "^1.4.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
